# PlatformIO_gTestgMock

./: CMakeLists.txt  README.md  platformio.ini
.github/workflows/: ci-cmake-gooogletest.yml
lib/hal/: arduino_types.h  hal.cpp  hal.h
lib/hal_interface/: hal_if.h
lib/loopInToOut/: loopInToOut.cpp  loopInToOut.h
src/: main.cpp
test/desktop/: CMakeLists.txt  unittest_loopInToOut.cpp
test/desktop/mocks/: hal_mock.h
test/test_desktop/: unittest_loopInToOut.cpp
test/test_desktop/mocks/: hal_mock.h
